# TrackItPipe

./: .gitlab-ci.yml  README.md
testdata/: glas.3mf  glas.scad  glas.trackproj  glasExport.3mf  glasExport2.3mf  glasExport3.3mf  glasRotate.trackproj  testCompensation.trackproj  testExport.trackproj  testExport2.trackproj  testRotate.3mf  testWindows.trackproj  testbutton.3mf  testbutton.stl  yPlate.stl  zEdgeLift.3mf  zPlate0.3mf  zPlate0Test1.3mf  zPlate0Test2.3mf  zPlate0Test3.3mf  zPlate_0.stl
track-client/TrackClient/: unityProject.vrmanifest
track-client/TrackClient/Assets/Plugins/: Lib3MF.cs
track-client/TrackClient/Assets/Scenes/: SampleScene.unity
track-client/TrackClient/Assets/SteamVR_Resources/Resources/: SteamVR_Settings.asset
track-client/TrackClient/Assets/TrackpointApp/: AbstractTrackingSystem.cs  ActionPoint.cs  Configuration.cs  OptiTrack.cs  SteamVRTrack.cs  TrackpointData.cs  TrackpointMesh.cs
track-client/TrackClient/Assets/XR/: XRGeneralSettings.asset
track-client/TrackClient/Assets/XR/Settings/: Open VR Settings.asset
track-client/TrackClient/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
trackpoint-app/: .gitignore  CMakeLists.txt  THIRDPARTY_LICENCES  build-dependencies-first.sh  macos_make_bundle_portable.sh  requirements.txt  toolchain-mingw-w64.cmake  trackpoint-app.py  transforms.cpp
trackpoint-app/cmake/: FindLib3MF.cmake
trackpoint-app/gui/: EditWidget.ui  MainWindow.ui  NoMeshWidget.ui
trackpoint-app/include/: ActionPoint.hpp  EMFTrackPoint.hpp  EditWidget.hpp  HudCallback.hpp  MainWindow.hpp  MeshTools.hpp  NoMeshWidget.hpp  OSGWidget.hpp  OpenScadRenderer.hpp  OptiTrackPoint.hpp  PickHandler.hpp  PlatformSupport.hpp  PointShape.hpp  ProjectStore.hpp  STLImport.hpp  SteamVRTrackPoint.hpp  StoreHandler.hpp  StringBasics.hpp  ThreeMFWriter.hpp  TrackPoint.hpp  TrackPointRenderer.hpp  TrackSystemSettingsStructs.hpp  defaults.hpp  enums.hpp
trackpoint-app/resources/: generate.py  legal-info.txt  resources.hpp  scad.hpp  steamvrthread.stl  steamvrtracker.stl
trackpoint-app/src/: ActionPoint.cpp  EMFTrackPoint.cpp  EditWidget.cpp  HudCallback.cpp  MainWindow.cpp  MeshTools.cpp  NoMeshWidget.cpp  OSGWidget.cpp  OpenScadRenderer.cpp  OptiTrackPoint.cpp  PickHandler.cpp  PointShape.cpp  ProjectStore.cpp  STLImport.cpp  SteamVRTrackPoint.cpp  StoreHandler.cpp  StringBasics.cpp  ThreeMFWriter.cpp  TrackPoint.cpp  TrackPointRenderer.cpp  main.cpp  trackpointapp.hpp.in
trackpoint-cpp/: CMakeLists.txt  transforms.cpp
