CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(osgExample)

FIND_PACKAGE(OpenSceneGraph REQUIRED COMPONENTS osgViewer osgDB osgGA osgText)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE_DIRECTORIES(
    ${OPENSCENEGRAPH_INCLUDE_DIRS}
)

ADD_EXECUTABLE(osgExample main.cpp)
ADD_EXECUTABLE(osgTransform transforms.cpp)

TARGET_LINK_LIBRARIES(osgExample
    ${OPENSCENEGRAPH_LIBRARIES}
)

TARGET_LINK_LIBRARIES(osgTransform
    ${OPENSCENEGRAPH_LIBRARIES}
)
